syntax = "proto3";
package make;

import "protobuf/make/make.proto";

option go_package = "github.com/rickypai/web-template/api/protobuf/make";

service MakeReader {
  rpc GetOneByID(GetOneByIDRequest) returns (GetOneByIDResponse) {}
  rpc GetManyByIDs(GetManyByIDsRequest) returns (GetManyByIDsResponse) {}
  rpc ListByCursor(ListByCursorRequest) returns (ListByCursorResponse) {}
  rpc ListByPage(ListByPageRequest) returns (ListByPageResponse) {}
}

message GetOneByIDRequest {
  int64 id = 1;
}

message GetOneByIDResponse {
  make.Make result = 1;
}

message GetManyByIDsRequest {
  repeated int64 ids = 1;
}

message GetManyByIDsResponse {
  repeated make.Make results = 1;
}

message ListByCursorRequest {
  int64 cursor = 1;

  int64 count = 2; // defaults to 20
}

message ListByCursorResponse {
  repeated make.Make results = 1;

  int64 cursor = 2;
}

message ListByPageRequest {
  int64 page = 1;

  int64 size = 2; // defaults to 20
}

message ListByPageResponse {
  repeated make.Make results = 1;

  int64 next_page = 2;

  int64 total_pages = 3;

  bool has_next = 4;
}
